# Note-taking-app

./: pyproject.toml
src/: main.py
src/config/: cfg.py
src/database/: db.py
src/models/: note.py  user.py
src/routers/: health.py  notes.py  users.py
src/schemas/: notes.py  users.py
src/utils/: auth.py  security_utils.py
tests/: test_app_health.py  test_notes.py  test_users.py
