[tool.poetry]
name = "Note Taking App"
version = "0.1.0"
description = "Simple note taking app made with fastapi"
authors = ["Agustin Arce <agustinarce@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = {extras = ["standard"], version = "^0.111.0"}
uvicorn = "0.23.2"
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
pydantic-settings = "^2.3.3"
bcrypt = "^4.1.3"
pytest-asyncio = "^0.23.7"
pytest-profiling = "^1.7.0"
pytest-xdist = "^3.6.1"
authx = "^1.2.0"
python-multipart = "^0.0.9"
sqlmodel = "^0.0.19"
pytest-sugar = "^1.0.0"
mypy = "^1.10.1"


[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -s -ra -q"
testpaths = [
    "tests",
]
asyncio_mode="auto"


